[gd_scene load_steps=6 format=3 uid="uid://s7cm18ky7uh1"]

[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_0gi2q"]
[ext_resource type="Texture2D" uid="uid://cwcyks6e7wuja" path="res://Burger Topper Assets/Button.png" id="1_tc1vd"]
[ext_resource type="PackedScene" uid="uid://btq36sbea62b8" path="res://ingred/ingred_1.tscn" id="3_ce7b8"]
[ext_resource type="PackedScene" uid="uid://ch8jlbjqerixc" path="res://ingred/ingred_0.tscn" id="3_tbdkf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bim8i"]
bg_color = Color(0.74902, 0.505882, 0.392157, 1)
corner_radius_top_right = 25

[node name="GameScene" type="Node2D"]
script = ExtResource("1_0gi2q")
food_scenes = Array[PackedScene]([ExtResource("3_ce7b8")])

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.603922, 0.364706, 0.247059, 1)

[node name="HeadingColor" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1152.0
offset_bottom = 128.0
grow_horizontal = 2
color = Color(0.74902, 0.505882, 0.392157, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeText" type="Label" parent="CanvasLayer"]
offset_right = 353.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "Time"

[node name="HealthText" type="Label" parent="CanvasLayer"]
offset_left = 766.0
offset_top = 3.0
offset_right = 1119.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 50
text = "Health"

[node name="BurgerHolder" type="Panel" parent="."]
offset_top = 572.0
offset_right = 597.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bim8i")

[node name="Button" type="Button" parent="."]
offset_left = 554.0
offset_top = 248.0
offset_right = 704.0
offset_bottom = 506.0
text = "Button"

[node name="TextureRect" type="TextureRect" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -128.0
offset_right = 223.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tc1vd")

[node name="Timer" type="Timer" parent="."]
wait_time = 300.0

[node name="ingred_0" parent="." instance=ExtResource("3_tbdkf")]
position = Vector2(271, 487)

[node name="ingred_1" parent="." instance=ExtResource("3_ce7b8")]
position = Vector2(275, 313)

[node name="spawn_location" type="Marker2D" parent="."]
position = Vector2(288, 164)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
